--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,1 +1,13 @@
-html
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Page Title</title>
+  <meta charset="UTF-8"/>
+  <script src="rock-paper-scissors.js"></script>
+</head>
+<body>
+  
+<p>Let's play ROCK - PAPER - SCISSORS!!!</p>
+
+</body>
+</html>
