added some initial UI

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Rock - Paper - Scissors Game</title>
   <meta charset="UTF-8"/>
-  <script src="rock-paper-scissors.js"></script>
+  <script defer src="rock-paper-scissors.js"></script>
 </head>
 <body>
+<div>
+  <p>LET'S PLAY ROCK - PAPER - SCISSORS!!!</p>
+  <p> ROUND NUMBER: <span id="round-n"> 1 </span></p>
+  <p>Please make your selection</p>
+</div>  
+
+
+<button id="ROCK" id="button">ROCK</button>
+<button id="PAPER" id="button">PAPER</button>
+<button id="SCISSORS" id="button">SCISSORS</button>
+
+<div>
+ 
+  <p> YOUR SCORE: <span id="p-score"> 0 </span> </p>
+  <p> COMPUTER SCORE: <span id="c-score"> 0 </span> </p>
+  <p> ROUND RESULT: <span id="r-result">  </span> </p>
   
-<p>Let's play ROCK - PAPER - SCISSORS!!!</p>
+</div>
 
 </body>
+
+
 </html>
